--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,6 @@
             }
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
