--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     "require": {
         "php": "^8.4",
         "filament/filament": "^3.3",
-        "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0||^12.0"
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
@@ -59,7 +59,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Sharenjoy\\NoahCms\\NoahCmsServiceProvider"
+                "Sharenjoy\\NoahCms\\NoahCmsServiceProvider",
+                "Sharenjoy\\NoahCms\\NoahPanelProvider"
             ],
             "aliases": {
                 "NoahCms": "Sharenjoy\\NoahCms\\Facades\\NoahCms"
