add filament related

--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,27 @@
     ],
     "require": {
         "php": "^8.4",
+        "awcodes/filament-tiptap-editor": "^3.0",
+        "bezhansalleh/filament-shield": "^3.3",
+        "codewithdennis/filament-select-tree": "^3.1",
         "filament/filament": "^3.3",
+        "filament/spatie-laravel-tags-plugin": "^3.2",
+        "filament/spatie-laravel-translatable-plugin": "^3.2",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
-        "spatie/laravel-package-tools": "^1.16"
+        "mcamara/laravel-localization": "^2.2",
+        "mvenghaus/filament-plugin-translatable-inline": "^3.0",
+        "noxoua/filament-activity-log": "^2.2",
+        "outerweb/filament-settings": "^1.2",
+        "outerweb/filament-translatable-fields": "^2.0",
+        "overtrue/laravel-pinyin": "^5.1",
+        "ralphjsmit/laravel-filament-activitylog": "^1.8",
+        "ralphjsmit/laravel-filament-media-library": "^3.8",
+        "ralphjsmit/laravel-seo": "^1.6",
+        "solution-forest/filament-tree": "^2.1",
+        "spatie/eloquent-sortable": "^4.4",
+        "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-package-tools": "^1.16",
+        "stechstudio/filament-impersonate": "^3.15"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
