add filament related

--- a/composer.json
+++ b/composer.json
@@ -86,11 +86,5 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://satis.ralphjsmit.com"
-        }
-    ]
+    "prefer-stable": true
 }
