--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "stechstudio/filament-impersonate": "^3.15"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
         "orchestra/testbench": "^10.0.0||^9.0.0||^8.22.0",
