--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,10 @@
         "spatie/eloquent-sortable": "^4.4",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-package-tools": "^1.16",
-        "stechstudio/filament-impersonate": "^3.15"
+        "stechstudio/filament-impersonate": "^3.15",
+        "torann/currency": "^1.1",
+        "torann/geoip": "^3.0",
+        "webpatser/laravel-countries": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
