--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "spatie/laravel-package-tools": "^1.16",
         "stechstudio/filament-impersonate": "^3.15",
         "torann/currency": "^1.1",
-        "torann/geoip": "^3.0"
+        "torann/geoip": "^3.0",
+        "webpatser/laravel-countries": "^1.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
