--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "filament/spatie-laravel-translatable-plugin": "^3.2",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
         "lorisleiva/laravel-actions": "^2.9",
+        "lwwcas/laravel-countries": "^4.12",
         "mcamara/laravel-localization": "^2.2",
         "mvenghaus/filament-plugin-translatable-inline": "^3.0",
         "noxoua/filament-activity-log": "^2.2",
@@ -40,8 +41,7 @@
         "spatie/laravel-package-tools": "^1.16",
         "stechstudio/filament-impersonate": "^3.15",
         "torann/currency": "^1.1",
-        "torann/geoip": "^3.0",
-        "webpatser/laravel-countries": "^1.5"
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
