--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "filament/filament": "^3.3",
         "filament/spatie-laravel-tags-plugin": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
+        "guava/filament-modal-relation-managers": "^1.4",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
         "lorisleiva/laravel-actions": "^2.9",
         "mcamara/laravel-localization": "^2.2",
