--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.4",
         "awcodes/filament-tiptap-editor": "^3.0",
+        "awcodes/shout": "^2.0",
         "barryvdh/laravel-dompdf": "^3.1",
         "bezhansalleh/filament-shield": "^3.3",
         "codewithdennis/filament-select-tree": "^3.1",
