--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "bezhansalleh/filament-shield": "^3.3",
         "codewithdennis/filament-select-tree": "^3.1",
+        "coolsam/nested-comments": "^1.0",
         "filament/filament": "^3.3",
         "filament/spatie-laravel-tags-plugin": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
