--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "guava/filament-modal-relation-managers": "^1.4",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
         "lorisleiva/laravel-actions": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^2.2",
         "mvenghaus/filament-plugin-translatable-inline": "^3.0",
         "noxoua/filament-activity-log": "^2.2",
@@ -42,6 +43,7 @@
         "solution-forest/filament-tree": "^2.1",
         "spatie/eloquent-sortable": "^4.4",
         "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-model-status": "^1.18",
         "spatie/laravel-package-tools": "^1.16",
         "stechstudio/filament-impersonate": "^3.15",
         "tapp/filament-value-range-filter": "^1.0",
