move suvery to noah-shop

--- a/composer.json
+++ b/composer.json
@@ -94,8 +94,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Sharenjoy\\NoahCms\\NoahCmsServiceProvider",
-                "Sharenjoy\\NoahCms\\NoahPanelProvider"
+                "Sharenjoy\\NoahCms\\NoahCmsServiceProvider"
             ],
             "aliases": {
                 "NoahCms": "Sharenjoy\\NoahCms\\Facades\\NoahCms"
